moved patch routes / tests from Policy to Customer
