# openapi.yml
@@ -31,6 +31,32 @@ paths:
           description: 200 Success
         400: 
           description: 400 Bad request
+    patch:
+        tags:
+        - "Customer"
+        summary: "Patch a customer record"
+        description: "Patch selected fields in a customer record. Example: {id: valid_customer_id, firstName: new_first_name_value}"
+        parameters: []
+        requestBody: 
+          required: true
+          description: "Send payload with fieldName / fieldValue to patch. 'id' is required; this is the customer id. Other vals: firstName, lastName"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: Int64
+                  fieldName:
+                    type: String
+              example:
+                id: 1
+                firstName: "test firstName"
+        responses:
+          200: 
+            description: 200 Success
+          400: 
+            description: 400 Bad request
   /api/v1/customer/{id}:
       get:
         tags: 
@@ -67,11 +93,11 @@ paths:
         tags:
         - "Policy"
         summary: "Patch a policy record"
-        description: "Patch selected fields in a policy record. Example: {id: valid_policy_id, firstName: new_first_name_value}"
+        description: "Patch selected fields in a policy record. Example: {id: valid_policy_id, policyNumber: new_policy_number_value}"
         parameters: []
         requestBody: 
           required: true
-          description: "Send payload with fieldName / fieldValue to patch. 'id' is required; this is the policy id. Other vals can be firstName / lastName / policyNumber"
+          description: "Send payload with fieldName / fieldValue to patch. 'id' is required; this is the policy id. Other vals: policyNumber"
           content:
             application/json:
               schema:
@@ -83,7 +109,7 @@ paths:
                     type: String
               example:
                 id: 1
-                firstName: "test firstName 01"
+                policyNumber: "test policy number"
         responses:
           200: 
             description: 200 Success
